<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".NormalMode">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCanc"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:backgroundTint="@color/red"
                android:onClick="btnCanc"
                android:text="@string/cancella"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnParentesi"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnParentesiAperta"
                android:text="@string/parentesiAperta"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnEsponente"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnParentesiChiusa"
                android:text="@string/parentesiChiusa"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnDiviso"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:backgroundTint="@color/orange"
                android:onClick="btnDiviso"
                android:text="@string/diviso"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnSeven"
                android:text="@string/numberSeven"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnEight"
                android:text="@string/numberEight"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnNine"
                android:text="@string/numberNine"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPer"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:backgroundTint="@color/orange"
                android:onClick="btnPer"
                android:text="@string/per"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnFour"
                android:text="@string/numberFour"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnFive"
                android:text="@string/numberFive"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnSix"
                android:text="@string/numberSix"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMeno"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:backgroundTint="@color/orange"
                android:onClick="btnMeno"
                android:text="@string/meno"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnOne"
                android:text="@string/numberOne"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnTwo"
                android:text="@string/numberTwo"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnThree"
                android:text="@string/numberThree"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPiu"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:backgroundTint="@color/orange"
                android:onClick="btnPiu"
                android:text="@string/più"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPiuMeno"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnEsponente"
                android:text="@string/esponente"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnZero"
                android:text="@string/numberZero"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPunto"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnVirgola"
                android:text="@string/punto"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnUguale"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/corners"
                android:onClick="btnUguale"
                android:text="@string/uguale"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/btnBackspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/layout_buttons"
        android:backgroundTint="@color/red"
        android:onClick="btnBackspace"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backspace" />

    <Button
        android:id="@+id/btnBackspace2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/layout_buttons"
        android:onClick="btnPiuMeno"
        android:textSize="24sp"
        android:text="@string/piuMeno"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtOperazione"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/scritta"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

</androidx.constraintlayout.widget.ConstraintLayout>