<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Converter">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnA"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:enabled="false"
                android:onClick="btnA"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnB"
                android:text="B"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnC"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnC"
                android:text="C"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btnBackspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnBackspace"
                app:srcCompat="@drawable/backspace"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:enabled="false"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnSeven"
                android:text="@string/numberSeven"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnEight"
                android:text="@string/numberEight"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnNine"
                android:text="@string/numberNine"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnD"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:enabled="false"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnD"
                android:text="D"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnFour"
                android:text="@string/numberFour"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnFive"
                android:text="@string/numberFive"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnSix"
                android:text="@string/numberSix"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnE"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnE"
                android:text="E"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnOne"
                android:text="@string/numberOne"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnTwo"
                android:text="@string/numberTwo"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnThree"
                android:text="@string/numberThree"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnF"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:enabled="false"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:onClick="btnF"
                android:text="F"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/layout_buttons"
                android:onClick="btnZero"
                android:text="@string/numberZero"
                android:textColor="@color/white"
                android:textSize="24sp" />
           <Button
            android:id="@+id/btnCanc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/layout_buttons"
            android:onClick="btnCanc"
            android:text="@string/cancella"
            android:textColor="@color/white"
            android:textSize="24sp" />

        </TableRow>
    </TableLayout>


    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/scritta"
        android:textColor="@color/black"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/btnBase"
        android:layout_width="205dp"
        android:layout_height="64dp"
        android:text="FROM"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnTo"
        android:layout_width="205dp"
        android:layout_height="64dp"
        android:text="TO"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnConverti"
        android:layout_width="148dp"
        android:layout_height="73dp"
        android:onClick="bottoneConverti"
        android:text="CONVERT"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnConverti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnConverti"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="RESULT:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnConverti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnConverti"
        app:layout_constraintVertical_bias="0.50" />


</androidx.constraintlayout.widget.ConstraintLayout>